--- a/c4-final-project-starter-code/backend/serverless.yml
+++ b/c4-final-project-starter-code/backend/serverless.yml
@@ -1,5 +1,5 @@
 # TODO: Change the name of the org 
-org: khoitha
+org: khanght1
 app: serverless-todo-app
 service: serverless-todo-app
 frameworkVersion: 3.33.0
@@ -9,7 +9,6 @@ plugins:
   - serverless-iam-roles-per-function
   - serverless-plugin-tracing
   - serverless-reqvalidator-plugin
-  # - serverless-aws-documentation
 
 provider:
   name: aws
@@ -27,9 +26,9 @@ provider:
   # Use these variables in the functions and resouorces section below. For example, 
   # ${self:provider.environment.ATTACHMENT_S3_BUCKET}
   environment:
-    TODOS_TABLE: P4-Todos-${self:provider.stage}
+    TODOS_TABLE: Project4-Todos-${self:provider.stage}
     TODOS_CREATED_AT_INDEX: CreatedAtIndex
-    ATTACHMENT_S3_BUCKET: khoitha-c4-todo-images-${self:provider.stage}
+    ATTACHMENT_S3_BUCKET: khanght1-c4-todo-images-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
 
   logs:
@@ -159,10 +158,6 @@ functions:
           - dynamodb:UpdateItem
           - dynamodb:GetItem
         Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
-      # - Effect: Allow
-      #   Action:
-      #     - s3:PutObject
-      #   Resource: arn:aws:s3:::${self:provider.environment.ATTACHMENT_S3_BUCKET}/*
       - Effect: Allow
         Action:
           - xray:PutTraceSegments
